tests/invalid_inputs/sema/ic_void_ptr_to_int_ptr.cpp
// test that void* is not implicitly convertible to int*

int main() {
	void *pv;
	int *pi = pv;	// error
}
